at work ui light themee

--- a/styles.html
+++ b/styles.html
@@ -83,7 +83,7 @@
                 </button>
               </div>
             </div>
-            <div class="mb-12 overflow-y-auto table-scrollbar" style="max-height: 700px">
+            <div class="mb-12 overflow-y-auto alt-table-scrollbar" style="max-height: 700px">
               <table
                 class="w-[calc(100%-10px)] table-auto border-separate text-vls"
                 style="max-height: 700px; border-spacing: 0 10px">
